初始化项目

--- a/SmallNetCore.Common/SmallNetCore.Common.csproj
+++ b/SmallNetCore.Common/SmallNetCore.Common.csproj
@@ -4,14 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Base\" />
-    <Folder Include="DBModels\" />
-    <Folder Include="ViewModels\Response\" />
-    <Folder Include="Enums\" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
