--- a/SmallNetCore.Extensions/SmallNetCore.Extensions.csproj
+++ b/SmallNetCore.Extensions/SmallNetCore.Extensions.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SmallNetCore.Common\SmallNetCore.Common.csproj" />
+    <ProjectReference Include="..\SmallNetCore.Models\SmallNetCore.Models.csproj" />
+  </ItemGroup>
+
 </Project>
