--- a/SmallNetCore.IServices/SmallNetCore.IServices.csproj
+++ b/SmallNetCore.IServices/SmallNetCore.IServices.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SmallNetCore.Extensions\SmallNetCore.Extensions.csproj" />
+    <ProjectReference Include="..\SmallNetCore.Models\SmallNetCore.Models.csproj" />
+  </ItemGroup>
+
 </Project>
