--- a/SmallNetCore.Models/SmallNetCore.Models.csproj
+++ b/SmallNetCore.Models/SmallNetCore.Models.csproj
@@ -8,9 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Base\" />
-    <Folder Include="DBModels\" />
-    <Folder Include="ViewModels\Response\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
