加入一些初始化信息

--- a/SmallNetCore.UI/appsettings.json
+++ b/SmallNetCore.UI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSetting": {
+    "SecretKey": "d0ecd23c-dfdb-4005-a2ea-0fea210c858a", // 密钥
+    "Issuer": "jwtIssuertest", // 颁发者
+    "Audience": "jwtAudiencetest", // 接收者
+    "ExpireSeconds": 2000 // 过期时间（20s）
+  }
 }
