--- a/SmallNetCore.UI/appsettings.json
+++ b/SmallNetCore.UI/appsettings.json
@@ -11,5 +11,13 @@
     "Issuer": "jwtIssuertest", // 颁发者
     "Audience": "jwtAudiencetest", // 接收者
     "ExpireSeconds": 2000 // 过期时间（20s）
+  },
+  "MYSQL": {
+    "ConnectionString": "Server=127.0.0.1;Port=3306;Database=firsttestdb;Uid=root;Pwd=123456;pooling=true;CharSet=utf8",
+    "Database": "firsttestdb" // 接收者
+  },
+  "MYSQL2": {
+    "ConnectionString": "Server=127.0.0.1;Port=3306;Database=secondtestdb;Uid=root;Pwd=123456;pooling=true;CharSet=utf8",
+    "Database": "secondtestdb" // 接收者
   }
 }
