--- a/SmallNetCore.Models/SmallNetCore.Models.csproj
+++ b/SmallNetCore.Models/SmallNetCore.Models.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="SqlSugarCore" Version="5.0.6.4" />
   </ItemGroup>
 
 </Project>
