--- a/SmallNetCore.IRepository/SmallNetCore.IRepository.csproj
+++ b/SmallNetCore.IRepository/SmallNetCore.IRepository.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,11 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SqlSugar.IOC" Version="1.8.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SmallNetCore.IRepository\SmallNetCore.IRepository.csproj" />
     <ProjectReference Include="..\SmallNetCore.Models\SmallNetCore.Models.csproj" />
   </ItemGroup>
 
