加入第三方接口

--- a/SmallNetCore.Remotes/SmallNetCore.Remotes.csproj
+++ b/SmallNetCore.Remotes/SmallNetCore.Remotes.csproj
@@ -11,4 +11,9 @@
     <Folder Include="TencentServices\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SmallNetCore.Common\SmallNetCore.Common.csproj" />
+    <ProjectReference Include="..\SmallNetCore.Models\SmallNetCore.Models.csproj" />
+  </ItemGroup>
+
 </Project>
