--- a/SmallNetCore.Models/SmallNetCore.Models.csproj
+++ b/SmallNetCore.Models/SmallNetCore.Models.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="SqlSugarCore" Version="5.0.6.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Request\Remotes\" />
+  </ItemGroup>
+
 </Project>
