调整系统代码结构

--- a/SmallNetCore.UI/log4net.config
+++ b/SmallNetCore.UI/log4net.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-	<!--根配置-->
+	<!--根配置 推荐配置成写入数据库或者ES 不然服务器上排除问题比较麻烦，参考： https://www.cnblogs.com/STRSong/p/14269728.html-->
 	<root>
 		<level value="ERROR"/>
 		<level value="INFO"/>
